# clase-arquitectura-software

./: .editorconfig  .gitignore  README.md  docker-compose.yml  nginx.load_balancer.conf
api-gateway/: Dockerfile  app.js  package-lock.json  package.json
authentication-service/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json
authentication-service/src/: app.js  server.js  swagger-output.json
authentication-service/src/config/: config.js  database.js  swagger.js
authentication-service/src/controllers/: auth.js
authentication-service/src/dal/: credentials.js
authentication-service/src/handlers/: auth.js
authentication-service/src/middlewares/: validations.js
authentication-service/src/routes/: auth.js
authentication-service/src/services/: auth.js
authentication-service/tests/: auth.service.test.js
authentication-service/tests/integration/: auth.route.test.js
authentication-service/tests/unit/: auth.service.test.js
frontend/: Dockerfile  index.html  index.js  nginx.conf  styles.css
user-service/: Dockerfile  README.md  main.py  pyproject.toml
user-service/src/: app.py  main.py
user-service/src/models/: user.py
user-service/src/routers/: users.py
user-service/src/services/: user.py
user-service/tests/integration/: user_route_test.py
user-service/tests/unit/: user_service_test.py
