[project]
name = "user-service"
version = "0.1.0"
description = "User Service API Microservice"
authors = [{name = "Alejo Villores", email = "avillores@udesa.edu.ar"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test."
]
